dezyne/examples/error/illegal.dzn
// Dezyne --- Dezyne command line tools
//
// Copyright © 2021, 2023 Rutger van Beusekom <rutger@dezyne.org>
// Copyright © 2021 Jan (janneke) Nieuwenhuizen <janneke@gnu.org>
//
// This file is part of Dezyne.
//
// Dezyne is free software: you can redistribute it and/or modify it
// under the terms of the GNU Affero General Public License as
// published by the Free Software Foundation, either version 3 of the
// License, or (at your option) any later version.
//
// Dezyne is distributed in the hope that it will be useful, but
// WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
// Affero General Public License for more details.
//
// You should have received a copy of the GNU Affero General Public
// License along with Dezyne.  If not, see <http://www.gnu.org/licenses/>.
//
// Commentary:
//
// This model demonstrates undesirable or illegal behavior in a
// component.  Here the component does not accept the w.world which
// leads to failing the illegal check.
//
// Code:

interface ihello
{
  in void hello();

  behavior
  {
    on hello: {}
  }
}

interface iworld
{
  in void hello();
  out void world();

  behavior
  {
    on hello: world;
  }
}

component hello_illegal
{
  provides ihello h;
  requires iworld w;

  behavior
  {
    on h.hello(): w.hello();
    // on w.world(): {} // commenting this out leads to an implicit illegal
    // on w.world(): illegal; // an implicit illegal can also be made explicit
  }
}
